static/CSS/style.css
body {
	background-color: #34437e;
	height: 100%;
	min-height: 100%;
}

.navbar {
	color: white;
	max-height: 60px;
	background-color: #981526;
	font-size: 15px;
	font-family: Georgia, Times, "Times New Roman", serif;

}

.navbar li a:hover {
	color: #ffffff;
}

.navigation .navbar-brand {
	color: white;
	padding: inherit;
	font-weight: bold;
	font-family: Georgia, Times, "Times New Roman", serif;

}

.dropdown-item {
	color: #6E92AE;
}

.dropdown-menu .dropdown-item:hover,
.dropdown-menu .dropdown-item:active {
	background-color: #E74B60;
	margin-right: 10px;
}

.nav-link:hover {
	background-color: #E74B60;
}

.container-fluid {
	padding-top: 70px;
	padding-bottom: 70px;
	color: white;
}


.bg-1 {
	background-color: #ffffff;
	background-size: cover;
	color: #06113C;
}

.jumbotron {
	background-color: #ffffff;
}


  /* Adding styles to the aside and filter form */
  .election-form {
	margin-top: 50px;
  }
  
  .filters .panel-body {
	padding: 0;
  }
  
  .filters {
	margin-top: 10px;
  }
  
  select {
	display: block;
	width: 100%;
	padding: 8px;
	color: #8e979f;
	outline: none;
  }
  
  #table-area th {
	text-align: center;
  }
  
  #table-area th:first-child,
  #table-area th:nth-child(2),
  #table-area th:nth-child(6) {
	min-width: 70px;
  }
  
  .loader {
	margin-top: 50px;
  }
  
  .margin-top-50 {
	margin-top: 50px;
  }

/* Media Queries */
@media (max-width: 1200px) {
	.navbar-expand-md {
		background-color: #981526;
	}

	.navbar {
		max-height: none;
		padding: inherit;
	}

	.navbar div {
		margin: inherit;
		background-color: white;
	}

	.navbar-brand {
		padding: 10px;
	}

	button {
		margin-left: auto;
	}

	button:focus {
		outline: 1px dotted;
	}
}

.description-content {
	margin-top: 50px;
	margin-bottom: 50px;
	padding: 20px;
	color: black;
	background-color: white;
}

.imageNav-content {
	margin-top: 40px;
	margin-bottom: 20px;
	padding: 20px;
	color: black;
	background-color: white;
}

.description-header,
.imageNav-header {
	padding-top: 15px;
	padding-left: 4px;
	/* color: #6E92AE; */
	font-size: 26px;
	font-weight: bold;
	font-family: Georgia, Times, "Times New Roman", serif;
}

img {
	width: 100%;
	height: 100%;
}

.description-image {
	float: left;
	width: 60%;
	height: 60%;
}

p {
	color: #697379;
	font-size: 14px;
	font-family: Arial, Helvetica, sans-serif;
}

strong {
	color: #E74B60;
}


a:link,
a:visited {
	color: #6E92AE;
}

a:hover,
a:active {
	color: rgb(102, 172, 212);
}

h3 {
	color: white;
	font-family: Georgia, Times, "Times New Roman", serif;
}

h4 {
	color: #6E92AE;
	font-family: Georgia, Times, "Times New Roman", serif;
}


.active,
.imageNav-photo:hover {
	border-color: #981526;
	border-style: solid;
}


/* 

Test Code for Drop Down Menu
*/

path {
	stroke: #ccc;
	stroke-width: 2;
	fill: none;
}

.axis path,
.axis line {
	fill: none;
	stroke: grey;
	stroke-width: 1;
	shape-rendering: crispEdges;
}

#legendContainer {
	position: absolute;
	top: 60px;
	left: 10px;
	overflow: auto;
	height: 490px;
	width: 110px;
}

#legend {
	width: 90px;
	height: 200px;
}

.legend {
	font-size: 12px;
	font-weight: normal;
	text-anchor: left;
}

.legendcheckbox {
	cursor: pointer;
}

#showAll {
	position: absolute;
	top: 600px;
	left: 880px;
}

#clearAll {
	position: absolute;
	top: 600px;
	left: 950px;
}

input {
	border-radius: 5px;
	padding: 5px 10px;
	background: #999;
	border: 0;
	color: #fff;
}

#inds {
	position: absolute;
	top: 10px;
	left: 10px;
}

